Improve width of publication table Fix issue of more details -> summary being unreadable Summary details now span width of table when displayed

--- a/app/assets/stylesheets/publications.scss
+++ b/app/assets/stylesheets/publications.scss
@@ -1,19 +1,17 @@
-.publications-filter {
-  background: govuk-colour("light-grey");
-
-  .gem-c-select {
-    label {
-      font-weight: 700;
-    }
-  }
-
-  .govuk-checkboxes__label::before {
-    background: govuk-colour("white");
-  }
-}
+$width: 40;
 
 .publications-table {
-  position: relative;
+  th:first-child {
+    width: calc($width * 1%);
+  }
+
+  details {
+    width: calc(100 / $width * 100%);
+  }
+
+  table {
+    table-layout: fixed;
+  }
 
   &--expand-link {
     float: right;
@@ -60,14 +58,6 @@
 
   .govuk-table {
     border-top: 2px solid $govuk-text-colour;
-
-    .govuk-table__header {
-      white-space: nowrap;
-    }
-
-    .govuk-table__cell__updated {
-      white-space: nowrap;
-    }
   }
 
   .govuk-details {
